# benchmarks-hermit

./: fork_benchmark.c  graph.py  hermit-loader-x86_64  spawn_benchmark.c
benchmark_load_scheduling/: Cargo.toml
benchmark_load_scheduling/src/: bench.rs  main.Rs  plot.py  script.sh  utils.rs
elnur_benchmark/: Cargo.toml
